name: ProgrammingInHaskell
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
Executable pih
  main-is: Chapter5/Main.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Chapter6_Recursive_Functions.Exercises
      Chapter6_Recursive_Functions.Main
      Chapter7__Higher_order_functions.Main
      Chapter5.Exercises
      Chapter5.Caesar
