name: ProgrammingInHaskell
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
Executable pih
  main-is: Chapter5_List_comprehensions/Main.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Chapter6_Recursive_Functions.Exercises
      Chapter6_Recursive_Functions.Main
      Chapter5_List_comprehensions.Exercises
      Chapter5_List_comprehensions.Caesar
      Chapter7_Higher_order_functions.Exercises
      Chapter7_Higher_order_functions.Main
      Chapter7_Higher_order_functions.Ex8
      Chapter7_Higher_order_functions.String_transmitter
